tests/fail/transmute_fat1.stderr
error: Undefined Behavior: constructing invalid value: encountered a pointer, but expected plain (non-pointer) bytes
  --> $DIR/transmute_fat1.rs:LL:CC
   |
LL |         std::mem::transmute::<&[u8], [u8; N]>(&[1u8])
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constructing invalid value: encountered a pointer, but expected plain (non-pointer) bytes
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/transmute_fat1.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

